Третья версия проекта

--- a/main.css
+++ b/main.css
@@ -3,7 +3,12 @@ header{
     justify-content: space-between;
     align-items: center;
     padding: 20px;
+    position: sticky;
+    background-color:#fff;
+    top: 0;
+    z-index: 1;
 }
+
 body {
     font-family: 'Raleway', sans-serif;
     color: #213053;
@@ -43,7 +48,20 @@ button:hover{
 .about__sun-image {
     width: 100px;
     height: 100px;
+    position: absolute;
 }
+@keyframes rotation{
+    0% {transform: rotate(0deg);}
+    100% {transform: rotate(360deg);}
+}
+img.about__sun-image{
+    animation-name: rotation;
+    animation-iteration-count: infinite;
+    animation-duration: 10s;
+    transform: rotate(360deg);
+    animation-timing-function: linear;
+}
+
 .about {
     display: flex;
     justify-content: space-around;
@@ -170,4 +188,59 @@ h3{
 }
 a{
     margin-bottom: 15px;
+}
+@media (max-width: 720px) {
+    .header__logo {
+        height: 20px;
+    }
+    header {
+        padding: 10px;
+    }
+    header a {
+        margin-right: 10px;
+    }
+    section.about {
+        padding: 50px 10px;
+        flex-direction: column-reverse;
+    }
+    section.form {
+        padding: 50px 10px;
+    }
+    .form h1 {
+        font-size: 36px;
+    }
+    .about h1{
+        font-size: 36px;
+        line-height: 40px;
+    }
+    .about__image {
+        width: 280px;
+    }
+    .about__sun-image {
+        width: 75px;
+        height: 75px;
+    }
+    footer {
+        padding: 50px 10px;
+    }
+    .footer__container {
+        flex-direction: column;
+    }
+}
+/* Планшеты */
+@media (max-width: 1024px) {
+    .about {
+        padding: 115px 20px;
+    }
+    .about h1 {
+        font-size: 36px;
+        line-height: 40px;
+    }
+    .about__image {
+        width: 280px;
+    }
+    .about__sun-image {
+        width: 75px;
+        height: 75px;
+    }
 }
